feat: add business graph projection